--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    background-color: #282c34;
+    margin: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .App {
+    max-width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+  .App section {
+    text-align: right;
+    float: right;
+    justify-content: center;
+    background-color: rgb(40, 37, 53);
   }
-}
+
+  .chats {
+    position: fixed;
+    float: left;
+    width: 30%;
+    background-color: white;
+    color: black;
+    overflow-y: auto;
+  }
+  
+  form {
+    height: 70px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(24, 23, 23);
+    width: 70%;
+    display: flex;
+    font-size: 24px;
+  }
+  
+  form button {
+    width: 20%;
+    background-color: rgb(56, 56, 143);
+  }
+  
+  
+  input {
+    line-height: 1.5;
+    width: 100%;
+    font-size: 24px;
+    background: rgb(58, 58, 58);
+    color: white;
+    outline: none;
+    border: none;
+    padding: 0 10px;
+  }
+  
+  button {
+    background-color: rgb(237, 86, 10); 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 20px;
+  }
+  
+  button:disabled {
+    opacity: 0.5;
+  }  
+  
+  ul, li {
+    text-align: left;
+    list-style: none;
+  }
+  
+  p {
+    margin-bottom: 12px;
+    line-height: 24px;
+    padding: 10px 20px;
+    border-radius: 25px;
+    position: relative;
+    color: white;
+    text-align: center;
+  }
+  
+  .message {
+    display: flex;
+    align-items: center;
+  }
+  
+  .sent p {
+    flex-direction: row-reverse;
+    color: white;
+    background: #0b93f6;
+    align-self: flex-end;
+  }
+  
+  img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 2px 5px;
+  }
+
+  .room{
+    margin-bottom: 100px;
+    width: 1008px;
+  }
+
+  h2{
+    text-align: center;
+    border-bottom: 3px solid black;
+    padding-bottom: 20px;
+  }
+
+  .chats{
+    height: 100%;
+  }
+
+  .chats li {
+    padding: 15px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .chats li:hover {
+    background-color: #3a3a3a;
+    color: #fff;
+  }
+  .chats li {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+  }
+  
+  .chats ul{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
